@@ -1,5 +1,12 @@
 2008-09-09  Dan Bernstein  <mitz@apple.com>
 
+        - Tiger build fix
+
+        * WebCoreSupport/WebSystemInterface.m:
+        (InitWebCoreSystemInterface):
+
+2008-09-09  Dan Bernstein  <mitz@apple.com>
+
         Reviewed by Darin Adler.
 
         - WebKit part of <rdar://problem/6206244> Use alternate character-to-glyph interface on Leopard
